ros2_ws/log/build_2023-12-28_12-38-23/mypkg/stderr.log
  File "/home/akira/ros2_2023/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 31
    if ＿name＿ == '＿main＿':
            ^
SyntaxError: invalid character in identifier

